# ChallengeOfDoom

./: .gitignore  README.md  conditions.json  json.food.json  main.spec  preferences.json  pyproject.toml  test.py  user-data.json
code/: api.py  data_classes.py  ez.py  main.py  main.spec  parse_json.py  setup.py  test.py  test2.py
code/Flask/: server.py
code/api/: FolderDescription.md  __init__.py  api.py  diagnosis.py  forecast.py  location.py
code/health/: __init__.py  check.py  health_log.py  tips.py
code/log/: health_log.py  test.py
code/log_processes/: UI_health_log.py  get_logs.py  health_log.py
code/machine_learning/: test.py
code/medicine/: FolderDescription.md  __init__.py  medicine.py  notifications.py  thing.py
code/multiple_choice/: mcq.py  questions.py
code/processes/: UI_health_log.py  __init__.py  health_log.py
code/setup/: FolderDescription.md  __init__.py  ctkcalender.py  health_log.py  imports.py  log_calendar.py  setup.py  setup_logging.py  setup_questions.py  special.py
code/utils/: FolderDescription.md  __init__.py  config.py  constants.py  data_classes.py  generic.py  mcq.py  notifications.py  offline.py  parse_json.py  setup.py  setup_questions.py  special.py  strings.py  test.py
json/: air-quality.json  body-locations.json  conditions.json  credentials.json  food.json  food_data.json  logged.json  logs.json  medicines.json  pollen.json  preferences.json  symptoms.json  token.json  user-data.json  weather.json
json_files/: conditions.json  logs.json  possible_diseases.json  preferences.json  symptoms.json  user-data.json
(+7 files in other folders)
